--- a/public/index.css
+++ b/public/index.css
@@ -20,34 +20,18 @@ header {
     background: white;
 }
 
-/* Nav */
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+#login, #loggedin, #playlist-before, #playlist-after  {
+    display: none;
+}
+.text-overflow {
     overflow: hidden;
-    background-color: #333;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 500px;
 }
 
-nav li {
-    float: left;
-}
-
-nav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-nav li a:hover:not(.active) {
-    background-color: #111;
-}
-
-.active {
-    background-color: #4CAF50;
+.search-item{
+    height: 200%;
 }
 
 /* main */
@@ -65,39 +49,10 @@ main{
 .panel-body{
     width:100%;
     position: relative;
-    
+
 }
-.panel-footer{ 
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    padding: 20px;
-    background-color: white;
-    opacity: 0.8;
-    color: black;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 20px;
-}
-.panel-price{ 
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    padding: 20px;
-    background-color: white;
-    color: black;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 20px;
-    border-style: solid;
-    border-width: 1px;
-}
-.panel-amount{ 
-    position: absolute;
-    top: 0px;
-    right: 0px;
-}
-INPUT[type=number] {
+
+INPUT[type=text] {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -105,36 +60,6 @@ INPUT[type=number] {
     border-style: solid;
     border-width: 1px;
     box-sizing: border-box;
-}
-
-/* Login */
-
-form {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    /*padding: 80px 80px 80px 190px;*/
-    padding-left: 30%;
-    padding-right: 30%;
-}
-
-.form-content {
-    width: 100%;
-    position: relative;
-    border-bottom: 1px solid #b2b2b2;
-}
-
-.label {
-    font-size: 15px;
-    color: #999999;
-    font-weight: bold;
-    text-align: right;
-    position: absolute;
-    top: 14px;
-    left: -105px;
-    width: 80px;
-
 }
 
 .input {
@@ -164,7 +89,7 @@ input.input {
     margin-right: auto;
 }
 
-.login-btn {
+.btn {
 
     justify-content: center;
     align-items: center;
