Things working dank

--- a/public/index.css
+++ b/public/index.css
@@ -20,9 +20,7 @@ header {
     background: white;
 }
 
-#login, #loggedin, #playlist-before, #playlist-after  {
-    display: none;
-}
+
 .text-overflow {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -114,4 +112,7 @@ footer {
     background-color: white;
     padding: 25px;
     text-align: center;
+}
+td, th {
+    vertical-align:top;
 }
