--- a/public/index.css
+++ b/public/index.css
@@ -116,3 +116,24 @@ footer {
 td, th {
     vertical-align:top;
 }
+
+#choose-playlist ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+#choose-playlist li {
+    float: left;
+}
+
+#choose-playlist li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+
